Add spatio-temporal analysis

--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:17:55.095546200Z",
-     "start_time": "2024-04-17T18:17:55.089537300Z"
+     "end_time": "2024-04-17T18:53:15.359832Z",
+     "start_time": "2024-04-17T18:53:15.288113Z"
     }
    },
    "outputs": [],
@@ -20,19 +20,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "72016166425c703a"
-  },
-  {
    "cell_type": "markdown",
    "source": [
-    "## RMSE Value Count for each Data Frame Using S-Arima Model"
+    "## Read Pre processed Data"
    ],
    "metadata": {
     "collapsed": false
@@ -41,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "outputs": [],
    "source": [
     "colombo_df = pd.read_csv('DataSets/ColomboData.csv')\n",
@@ -55,21 +45,31 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:05:49.226425700Z",
-     "start_time": "2024-04-17T18:05:49.189343Z"
+     "end_time": "2024-04-17T18:53:15.361832100Z",
+     "start_time": "2024-04-17T18:53:15.309257400Z"
     }
    },
    "id": "d726df36c16c468e"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## RMSE Value Count for each Data Frame Using S-Arima Model"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a3c38f19e05f9aac"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "outputs": [
     {
      "data": {
-      "text/plain": "(1430, 3)"
+      "text/plain": "(1430, 4)"
      },
-     "execution_count": 3,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,15 +85,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T17:57:42.258314400Z",
-     "start_time": "2024-04-17T17:57:42.231094500Z"
+     "end_time": "2024-04-17T18:53:15.382872700Z",
+     "start_time": "2024-04-17T18:53:15.367350100Z"
     }
    },
    "id": "11ee9a0f6373a173"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "outputs": [
     {
      "name": "stdout",
@@ -134,21 +134,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T17:57:44.951202700Z",
-     "start_time": "2024-04-17T17:57:43.164392200Z"
+     "end_time": "2024-04-17T18:53:17.230780200Z",
+     "start_time": "2024-04-17T18:53:15.374352500Z"
     }
    },
    "id": "1c6a8c2415e6e212"
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "outputs": [
     {
      "data": {
-      "text/plain": "(1428, 3)"
+      "text/plain": "(1428, 4)"
      },
-     "execution_count": 10,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,15 +163,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:03:23.541920400Z",
-     "start_time": "2024-04-17T18:03:23.527228Z"
+     "end_time": "2024-04-17T18:53:17.250470700Z",
+     "start_time": "2024-04-17T18:53:17.232782600Z"
     }
    },
    "id": "f9e06ba8141b4da7"
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "outputs": [
     {
      "name": "stdout",
@@ -212,21 +212,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:03:26.343678100Z",
-     "start_time": "2024-04-17T18:03:24.164983700Z"
+     "end_time": "2024-04-17T18:53:19.240573500Z",
+     "start_time": "2024-04-17T18:53:17.250470700Z"
     }
    },
    "id": "b2f1fd7ca7d7dac1"
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "outputs": [
     {
      "data": {
-      "text/plain": "(1427, 3)"
+      "text/plain": "(1427, 4)"
      },
-     "execution_count": 12,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,15 +241,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:03:41.157927900Z",
-     "start_time": "2024-04-17T18:03:41.141390700Z"
+     "end_time": "2024-04-17T18:53:19.251087800Z",
+     "start_time": "2024-04-17T18:53:19.235539400Z"
     }
    },
    "id": "e8e1d2bc98aacf7e"
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "outputs": [
     {
      "name": "stdout",
@@ -282,21 +282,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:04:07.629012500Z",
-     "start_time": "2024-04-17T18:04:06.520509300Z"
+     "end_time": "2024-04-17T18:53:20.221564Z",
+     "start_time": "2024-04-17T18:53:19.253089600Z"
     }
    },
    "id": "b6f23608522fc448"
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 74,
    "outputs": [
     {
      "data": {
-      "text/plain": "(1428, 3)"
+      "text/plain": "(1428, 4)"
      },
-     "execution_count": 17,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,15 +311,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:05:53.603621200Z",
-     "start_time": "2024-04-17T18:05:53.576878600Z"
+     "end_time": "2024-04-17T18:53:20.232076200Z",
+     "start_time": "2024-04-17T18:53:20.218566800Z"
     }
    },
    "id": "fdefb4114da00d79"
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "outputs": [
     {
      "name": "stdout",
@@ -352,21 +352,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:06:16.794631300Z",
-     "start_time": "2024-04-17T18:06:15.462469800Z"
+     "end_time": "2024-04-17T18:53:21.446097600Z",
+     "start_time": "2024-04-17T18:53:20.235080800Z"
     }
    },
    "id": "e2250dec0b704fa0"
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 76,
    "outputs": [
     {
      "data": {
-      "text/plain": "(1408, 3)"
+      "text/plain": "(1408, 4)"
      },
-     "execution_count": 19,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,15 +381,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:06:54.259106800Z",
-     "start_time": "2024-04-17T18:06:54.243583300Z"
+     "end_time": "2024-04-17T18:53:21.457154200Z",
+     "start_time": "2024-04-17T18:53:21.446097600Z"
     }
    },
    "id": "ef912bc5a80a404b"
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "outputs": [
     {
      "name": "stdout",
@@ -430,21 +430,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:07:23.564255500Z",
-     "start_time": "2024-04-17T18:07:21.435544100Z"
+     "end_time": "2024-04-17T18:53:23.496245800Z",
+     "start_time": "2024-04-17T18:53:21.462185200Z"
     }
    },
    "id": "83a9fda5b543a76e"
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 78,
    "outputs": [
     {
      "data": {
-      "text/plain": "(1420, 3)"
+      "text/plain": "(1420, 4)"
      },
-     "execution_count": 22,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,15 +459,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:08:32.377523600Z",
-     "start_time": "2024-04-17T18:08:32.366492700Z"
+     "end_time": "2024-04-17T18:53:23.504761300Z",
+     "start_time": "2024-04-17T18:53:23.490243600Z"
     }
    },
    "id": "8418d06bdf92d32f"
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 79,
    "outputs": [
     {
      "name": "stdout",
@@ -508,8 +508,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:08:48.889718Z",
-     "start_time": "2024-04-17T18:08:45.692114500Z"
+     "end_time": "2024-04-17T18:53:26.577542900Z",
+     "start_time": "2024-04-17T18:53:23.508276200Z"
     }
    },
    "id": "3e30eb396f75fbc4"
@@ -526,13 +526,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 80,
    "outputs": [
     {
      "data": {
-      "text/plain": "(1401, 3)"
+      "text/plain": "(1401, 4)"
      },
-     "execution_count": 24,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,15 +547,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:09:36.365350200Z",
-     "start_time": "2024-04-17T18:09:36.357833100Z"
+     "end_time": "2024-04-17T18:53:26.594055800Z",
+     "start_time": "2024-04-17T18:53:26.579545Z"
     }
    },
    "id": "f63a8021ce2a2c6f"
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 81,
    "outputs": [
     {
      "name": "stdout",
@@ -596,15 +596,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:10:02.559946700Z",
-     "start_time": "2024-04-17T18:09:59.701654900Z"
+     "end_time": "2024-04-17T18:53:29.266356800Z",
+     "start_time": "2024-04-17T18:53:26.598236200Z"
     }
    },
    "id": "82eab0e38fdcdbda"
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 82,
    "outputs": [
     {
      "name": "stderr",
@@ -618,7 +618,7 @@
      "data": {
       "text/plain": "<Axes: >"
      },
-     "execution_count": 31,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -644,21 +644,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:14:32.249674800Z",
-     "start_time": "2024-04-17T18:14:29.286684600Z"
+     "end_time": "2024-04-17T18:53:32.149977400Z",
+     "start_time": "2024-04-17T18:53:29.267975300Z"
     }
    },
    "id": "db9bb8fb49eeb312"
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 83,
    "outputs": [
     {
      "data": {
       "text/plain": "<Axes: >"
      },
-     "execution_count": 37,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -684,15 +684,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:19:40.352544600Z",
-     "start_time": "2024-04-17T18:19:38.437695Z"
+     "end_time": "2024-04-17T18:53:33.893229700Z",
+     "start_time": "2024-04-17T18:53:32.150981300Z"
     }
    },
    "id": "e2766bf65fea9d82"
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 84,
    "outputs": [
     {
      "name": "stderr",
@@ -706,7 +706,7 @@
      "data": {
       "text/plain": "<Axes: >"
      },
-     "execution_count": 38,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -732,15 +732,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:19:50.271989Z",
-     "start_time": "2024-04-17T18:19:48.012565200Z"
+     "end_time": "2024-04-17T18:53:36.050730200Z",
+     "start_time": "2024-04-17T18:53:33.895228900Z"
     }
    },
    "id": "e09d9ece02eea0d9"
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 85,
    "outputs": [
     {
      "name": "stderr",
@@ -754,7 +754,7 @@
      "data": {
       "text/plain": "<Axes: >"
      },
-     "execution_count": 39,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -780,21 +780,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:20:20.141115900Z",
-     "start_time": "2024-04-17T18:20:17.474375100Z"
+     "end_time": "2024-04-17T18:53:38.598361100Z",
+     "start_time": "2024-04-17T18:53:36.053731Z"
     }
    },
    "id": "e5974c175dcc211c"
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 86,
    "outputs": [
     {
      "data": {
       "text/plain": "<Axes: >"
      },
-     "execution_count": 40,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -820,15 +820,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:20:38.310425200Z",
-     "start_time": "2024-04-17T18:20:36.802271900Z"
+     "end_time": "2024-04-17T18:53:39.923465700Z",
+     "start_time": "2024-04-17T18:53:38.599362800Z"
     }
    },
    "id": "f6c26fc3065a5b13"
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 87,
    "outputs": [
     {
      "name": "stderr",
@@ -842,7 +842,7 @@
      "data": {
       "text/plain": "<Axes: >"
      },
-     "execution_count": 41,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -868,15 +868,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:21:20.466404700Z",
-     "start_time": "2024-04-17T18:21:15.730349400Z"
+     "end_time": "2024-04-17T18:53:44.696104200Z",
+     "start_time": "2024-04-17T18:53:39.925466200Z"
     }
    },
    "id": "826f7c46e806cf38"
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 88,
    "outputs": [
     {
      "name": "stderr",
@@ -890,7 +890,7 @@
      "data": {
       "text/plain": "<Axes: >"
      },
-     "execution_count": 42,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -916,21 +916,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-17T18:21:48.021406900Z",
-     "start_time": "2024-04-17T18:21:45.554237100Z"
+     "end_time": "2024-04-17T18:53:47.132064600Z",
+     "start_time": "2024-04-17T18:53:44.694104300Z"
     }
    },
    "id": "1983c11ef667b54e"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "cdf329418ba1aa61"
   }
  ],
  "metadata": {
