--- a/Spatio-Temporal Analysis.ipynb
+++ b/Spatio-Temporal Analysis.ipynb
@@ -510,6 +510,28 @@
     "collapsed": false
    },
    "id": "e3c423f46abe3cf9"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Analyzing How External factors affect on HCHO readings"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "842f739dc9c56ad1"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "wether_df = pd.read_csv(\"DataSets/kan_out\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1673df8fb48f847"
   }
  ],
  "metadata": {
