--- a/Spatio-Temporal Analysis.ipynb
+++ b/Spatio-Temporal Analysis.ipynb
@@ -1281,7 +1281,7 @@
    "execution_count": 30,
    "outputs": [],
    "source": [
-    "population_df = pd.read_csv(\"DataSets/world_population.csv\")\n",
+    "population_df = pd.read_csv(\"DataSets/.csv\")\n",
     "population_df = population_df[population_df[\"Country/Territory\"] == \"Sri Lanka\" ]"
    ],
    "metadata": {
