Update the code

--- a/Spatio-Temporal Analysis.ipynb
+++ b/Spatio-Temporal Analysis.ipynb
@@ -27,8 +27,19 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.interpolate import make_interp_spline\n",
     "import calendar\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import warnings"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "251b1e3329cf0de5"
   },
   {
    "cell_type": "markdown",
