--- a/Spatio-Temporal Analysis.ipynb
+++ b/Spatio-Temporal Analysis.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-18T17:53:51.429881100Z",
-     "start_time": "2024-04-18T17:53:51.186678400Z"
+     "end_time": "2024-04-19T10:26:08.418328900Z",
+     "start_time": "2024-04-19T10:26:08.403328500Z"
     }
    },
    "outputs": [],
@@ -27,19 +27,8 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.interpolate import make_interp_spline\n",
     "import calendar\n",
-    "import seaborn as sns\n",
-    "import warnings"
+    "import seaborn as sns"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "251b1e3329cf0de5"
   },
   {
    "cell_type": "markdown",
@@ -53,48 +42,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 4,
    "outputs": [],
    "source": [
-    "colombo_df = pd.read_csv('DataSets/ColomboData.csv')\n",
-    "kandy_df = pd.read_csv('DataSets/KandyData.csv')\n",
-    "bibile_df = pd.read_csv('DataSets/BibileData.csv')\n",
-    "nuwaraEliya_df = pd.read_csv('DataSets/NuwaraEliyData.csv')\n",
-    "deniyaya_df = pd.read_csv('DataSets/DeniyayaData.csv')\n",
-    "jaffna_df = pd.read_csv('DataSets/JaffnaData.csv')\n",
-    "kurunegala_df = pd.read_csv('DataSets/KurunegalaData.csv')"
+    "data = pd.read_csv('cleanDF.csv')\n",
+    "colombo_df = data[data['Location'] == \"Colombo Proper\"]\n",
+    "jaffna_df = data[data['Location'] == \"Jaffna Proper\"]\n",
+    "deniyaya_df = data[data['Location'] == \"Deniyaya, Matara\"]\n",
+    "nuwaraEliya_df = data[data['Location'] == \"Nuwara Eliya Proper\"]\n",
+    "kandy_df = data[data['Location'] == \"Kandy Proper\"]\n",
+    "bibile_df = data[data['Location'] == \"Bibile, Monaragala\"]\n",
+    "kurunegala_df = data[data['Location'] == \"Kurunegala Proper\"]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-18T17:53:51.531711500Z",
-     "start_time": "2024-04-18T17:53:51.423802800Z"
+     "end_time": "2024-04-19T10:27:37.482118400Z",
+     "start_time": "2024-04-19T10:27:37.336096800Z"
     }
    },
    "id": "19b6a4352f9d2ec"
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 5,
    "outputs": [],
    "source": [
-    "data = pd.concat([colombo_df, kandy_df, bibile_df, kurunegala_df, deniyaya_df, jaffna_df, nuwaraEliya_df])\n",
-    "data = data.drop(columns=['Unnamed: 0'])\n",
-    "clean_hcho_df = data\n",
     "data[\"Current Date\"]= pd.to_datetime(data[\"Current Date\"])"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-18T17:55:18.172821700Z",
-     "start_time": "2024-04-18T17:55:17.972900600Z"
+     "end_time": "2024-04-19T10:27:38.193042500Z",
+     "start_time": "2024-04-19T10:27:38.143532400Z"
     }
    },
-   "id": "2d48b386e5dd393b"
+   "id": "6142307a2d439f75"
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -126,8 +113,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-18T17:53:51.826326800Z",
-     "start_time": "2024-04-18T17:53:51.633175700Z"
+     "end_time": "2024-04-19T10:27:38.961853700Z",
+     "start_time": "2024-04-19T10:27:38.913852400Z"
     }
    },
    "id": "e536cffeb4e8932b"
@@ -1729,42 +1716,6 @@
     "collapsed": false
    },
    "id": "3ef9cc83151d59ef"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Save Main Dataset into csv file"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "bfe07975adc71e2f"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 220,
-   "outputs": [],
-   "source": [
-    "clean_hcho_df.to_csv(\"cleanDF.csv\", index=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-18T18:01:17.359227800Z",
-     "start_time": "2024-04-18T18:01:17.274599Z"
-    }
-   },
-   "id": "aa2b53e288efecf1"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "99456c6827eb9cb1"
   }
  ],
  "metadata": {
